@@ -4,7 +4,7 @@
 
     <groupId>io.github.tfw-org</groupId>
     <artifactId>tfw</artifactId>
-    <version>2023.3-SNAPSHOT</version>
+    <version>2024.3</version>
 
     <name>tfw</name>
     <description>The FrameWork for building highly scalable and maintainable applications</description>
@@ -14,15 +14,29 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sonar.exclusions>src/main/java/tfw/math/BigDecimal.java,
+            src/main/java/tfw/math/BigInteger.java,
+            src/main/java/tfw/math/BitSieve.java,
+            src/main/java/tfw/math/DoubleConsts.java,
+            src/main/java/tfw/math/FloatConsts.java,
+            src/main/java/tfw/math/MathContext.java,
+            src/main/java/tfw/math/MutableBigInteger.java,
+            src/main/java/tfw/math/RoundingMode.java,
+            src/main/java/tfw/math/SignedMutableBigInteger.java</sonar.exclusions>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.organization>tfw-org</sonar.organization>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -32,7 +46,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>3.10.0</version>
+                <configuration>
+                    <quiet>true</quiet>
+                    <doclint>all</doclint>
+                    <failOnWarnings>true</failOnWarnings>
+                    <failOnError>true</failOnError>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -48,7 +68,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.3.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -60,13 +80,38 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-Xlint:all,-options,-path</arg>
+                        <arg>-XDcompilePolicy=simple</arg>
+                        <arg>-Xplugin:ErrorProne \
+                        -XepAllErrorsAsWarnings</arg>
+                    </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>com.google.errorprone</groupId>
+                            <artifactId>error_prone_core</artifactId>
+                            <version>2.31.0</version>
+                        </path>
+                        <!-- Other annotation processors go here.
+
+                            If 'annotationProcessorPaths' is set, processors will no longer be
+                            discovered on the regular -classpath; see also 'Using Error Prone
+                            together with other annotation processors' below. -->
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.2.5</version>
             </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.13</version>
+                <version>1.7.0</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -75,26 +120,143 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.github.ekryd.sortpom</groupId>
-                <artifactId>sortpom-maven-plugin</artifactId>
-                <version>3.0.1</version>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>2.43.0</version>
                 <configuration>
-                    <createBackupFile>false</createBackupFile>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <lineSeparator>\n</lineSeparator>
-                    <nrOfIndentSpace>4</nrOfIndentSpace>
-                    <predefinedSortOrder>custom_1</predefinedSortOrder>
-                    <sortDependencies>scope</sortDependencies>
-                    <sortProperties>true</sortProperties>
+                    <java>
+                        <includes>
+                            <include>src/main/java/**/*.java</include>
+                            <include>src/test/java/**/*.java</include>
+                        </includes>
+                        <excludes>
+                            <exclude>src/main/java/tfw/math/BigDecimal.java</exclude>
+                            <exclude>src/main/java/tfw/math/BigInteger.java</exclude>
+                            <exclude>src/main/java/tfw/math/BitSieve.java</exclude>
+                            <exclude>src/main/java/tfw/math/DoubleConsts.java</exclude>
+                            <exclude>src/main/java/tfw/math/FloatConsts.java</exclude>
+                            <exclude>src/main/java/tfw/math/MathContext.java</exclude>
+                            <exclude>src/main/java/tfw/math/MutableBigInteger.java</exclude>
+                            <exclude>src/main/java/tfw/math/RoundingMode.java</exclude>
+                            <exclude>src/main/java/tfw/math/SignedMutableBigInteger.java</exclude>
+                        </excludes>
+                        <palantirJavaFormat>
+                            <version>2.32.0</version>
+                            <style>PALANTIR</style>
+                        </palantirJavaFormat>
+                    </java>
+                    <pom>
+                        <includes>
+                            <include>pom.xml</include>
+                        </includes>
+                        <sortPom>
+                            <encoding>${project.build.sourceEncoding}</encoding>
+                            <lineSeparator>\n</lineSeparator>
+                            <nrOfIndentSpace>4</nrOfIndentSpace>
+                            <predefinedSortOrder>custom_1</predefinedSortOrder>
+                            <sortDependencies>scope</sortDependencies>
+                            <sortProperties>true</sortProperties>
+                        </sortPom>
+                    </pom>
                 </configuration>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>sort</goal>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <mainClass>tfw.build.SearchAndReplace</mainClass>
+                    <arguments>
+                        <argument>./src/main/template</argument>
+                        <argument>./src/test/template</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <argLine>--illegal-access=permit</argLine>
+                    <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter">
+                        <theme>UNICODE</theme>
+                    </statelessTestsetInfoReporter>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>me.fabriciorby</groupId>
+                        <artifactId>maven-surefire-junit5-tree-reporter</artifactId>
+                        <version>1.3.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>3.25.0</version>
+                <configuration>
+                    <excludes>
+                        <exclude>tfw/math/BigDecimal.java</exclude>
+                        <exclude>tfw/math/BigInteger.java</exclude>
+                        <exclude>tfw/math/BitSieve.java</exclude>
+                        <exclude>tfw/math/DoubleConsts.java</exclude>
+                        <exclude>tfw/math/FloatConsts.java</exclude>
+                        <exclude>tfw/math/MathContext.java</exclude>
+                        <exclude>tfw/math/MutableBigInteger.java</exclude>
+                        <exclude>tfw/math/RoundingMode.java</exclude>
+                        <exclude>tfw/math/SignedMutableBigInteger.java</exclude>
+                    </excludes>
+                    <linkXRef>false</linkXRef>
+                    <failOnViolation>true</failOnViolation>
+                    <failurePriority>2</failurePriority>
+                    <maxAllowedViolations>5</maxAllowedViolations>
+                    <format>txt</format>
+                    <includeTests>true</includeTests>
+                    <minimumTokens>100</minimumTokens>
+                    <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
+                    <targetJdk>${maven.compiler.target}</targetJdk>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
                         </goals>
                         <phase>verify</phase>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.16.3</version>
+                <configuration>
+                    <targetClasses>
+                        <param>tfw*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>tfw*</param>
+                    </targetTests>
+                    <excludedClasses>
+                        <param>tfw.math*</param>
+                    </excludedClasses>
+                    <features>
+                        <feature>+auto_threads</feature>
+                    </features>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-junit5-plugin</artifactId>
+                        <version>1.2.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -132,8 +294,8 @@
 
     <developers>
         <developer>
-            <name>James D Cover</name>
-            <email>jdcove2@gmail.com</email>
+            <name>David Cover</name>
+            <email>david_cover@alum.drexel.edu</email>
             <organization>TFW</organization>
             <organizationUrl>https://github.com/tfw-org</organizationUrl>
         </developer>
@@ -170,7 +332,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.8</version>
+                        <version>0.8.12</version>
                         <executions>
                             <execution>
                                 <id>prepare-agent</id>
